<resources>
    <string name="app_name">WordUsherDev</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_game_results">GameResults</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="custom_word_hint">Enter your custom word!</string>
    <string name="game_title">W\u0020\u0020RDUSHER</string>
    <string name="not_enough_letters">To start a custom game, your word needs to contain at least two letters.</string>
    <string name="button_start">START</string>
    <string name="button_custom">CUSTOM</string>
    <string name="level_select">Level Select</string>
    <string name="assist_blue_robot_iris">Blue Robot Iris</string>
    <string name="assist_level_1_plants">Level 1: Plants</string>
    <string name="assist_level_2_computers">Level 2: Computers</string>
    <string name="assist_level_3_sci_fi">Level 3: Sci-Fi</string>
</resources>