<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_back"
    tools:context=".LevelSelect">

    <TextView
        android:layout_width="374dp"
        android:layout_height="116dp"
        android:fontFamily="@font/vt323"
        android:gravity="center"
        android:text="@string/level_select"
        android:textSize="60sp"
        android:textColor="@color/robot_iris"
        app:layout_constraintBottom_toTopOf="@+id/levels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <LinearLayout
        android:id="@+id/stars_level_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stars_level_1"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="@+id/levels"
        app:layout_constraintTop_toTopOf="@+id/levels"
        app:layout_constraintVertical_bias="0.6" />

    <LinearLayout
        android:id="@+id/stars_level_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/levels"
        app:layout_constraintVertical_bias="0.6" />

    <LinearLayout
        android:id="@+id/stars_level_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/levels"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toEndOf="@+id/stars_level_1"
        app:layout_constraintTop_toTopOf="@+id/levels"
        app:layout_constraintVertical_bias="0.6" />

    <LinearLayout
        android:id="@+id/levels"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.51">

        <ImageButton
            android:id="@+id/level_button_0"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/nature_icon"
            android:contentDescription="@string/assist_level_1_plants"/>

        <ImageButton
            android:id="@+id/level_button_1"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:background="@drawable/computers_icon"
            android:contentDescription="@string/assist_level_2_computers"/>

        <ImageButton
            android:id="@+id/level_button_2"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/scifi_icon"
            android:contentDescription="@string/assist_level_3_sci_fi"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>